<resources>
    <string name="app_name">MyApp3</string>
    <string name="action_settings">Settings</string>
    <string name="action_sort">Sort</string>
    <string name="action_rename">Rename</string>
    <string name="action_selectAll">Select All</string>
    <string name="action_properties">Properties</string>
    <string name="action_menu">Settings</string>
    <string-array name="dropdown">
        <item>First Item</item>
        <item>Second Item</item>
        <item>Third Item</item>
    </string-array>
    <string name="button1">Internal Storage</string>
    <string name="logo_desc">App logo</string>
    <string name="button_internal">Internal Storage</string>
    <string name="title_activity_bacon1">Bacon1</string>
    <string name="button_images">images</string>
    <string name="button_audio">audio</string>
    <string name="button_videos">vidoes</string>
    <string name="button_zip">Zip files</string>
    <string name="button_apps">apps</string>
    <string name="button_documents">documents</string>
    <string name="title_activity_sdcard">SDCard</string>
    <string name="image_images">Images</string>
    <string name="sd_audio">audio</string>
    <string name="sd_videos">videos</string>
    <string name="sd_zip">Zip Files</string>
    <string name="sd_apps">apps</string>
    <string name="sd_documents">documents</string>
    <string name="button_sd">SD card</string>
    <string name="text_internal">Internal Memory</string>
    <string name="title_activity_songmanager">Songmanager</string>
    <string name="title_activity_songplayer">Songplayer</string>
    <string name="title_activity_play_list1">PlayListActivity1</string>
    <string name="title_activity_acv">Acv</string>
    <string name="title_activity_android_building_music_player">AndroidBuildingMusicPlayerActivity
    </string>
    <string name="title_activity_play_list">PlayListActivity</string>
    <string name="title_activity_media_player">MediaPlayer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_sdvideos">SDVideos</string>
    <string name="title_activity_main1">MainActivity1</string>
    <string name="title_activity_image_gallery">ImageGallery</string>
    <string name="title_activity_adapter__photos_folder">Adapter_PhotosFolder</string>
    <string name="title_activity_pdf">PdfActivity</string>
    <string name="title_activity_pdf_adapter">PdfAdapter</string>
    <string name="title_activity_full_image">FullImageActivity</string>
    <string name="title_activity_view_pager">ViewPager</string>
    <string name="title_activity_my_fragment">MyFragment</string>
</resources>
