<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/menu_overflow"
        android:icon="@drawable/more"
        android:orderInCategory="11111"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:showAsAction="always"
        android:title="@string/action_menu">

        <menu>

            <item
                android:id="@+id/action_settings"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:showAsAction="always"
                android:title="@string/action_settings"/>

            <item
                android:id="@+id/action_rename"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:showAsAction="always"
                android:title="@string/action_rename"/>

            <item
                android:id="@+id/action_selectAll"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:showAsAction="ifRoom"
                android:title="@string/action_selectAll"/>
            <!-- Settings, should always be in the overflow -->

            <item
                android:id="@+id/action_properties"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:showAsAction="ifRoom"
                android:title="@string/action_properties"/>


            <item
                android:id="@+id/action_sort"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:showAsAction="ifRoom"
                android:title="@string/action_sort"/>
            <!-- Settings, should always be in the overflow -->

        </menu>
    </item>
</menu>